tests/fixtures/syntax/valid/action_continuation_marker_followed_by_hash_is_not_continuation.repor
case "trailing hash after marker is not a continuation" {
  $ echo hi \# comment
  assert { exit 0 }
}
