tests/fixtures/syntax/invalid/inline_comment_glued_to_token.repor
case "x" {
  $ true
  assert {
    exit 0#comment marker glued to a token does not start an inline comment
  }
}
